[package]
name = "experiment"
version = "0.1.0"
edition = "2018"

[dependencies]
apodize = "1.0.0"
actix = "0.9"
basic_dsp = "0.8.1"
basic_dsp_vector = "0.8.1"
clap = "2.33.0"
crossbeam = "0.2.0"
crossbeam-channel = "0.4.0"
crossbeam-queue = "0.2.1"
crossbeam-utils = "0.7.0"
hound = "3.4.0"
itertools = "0.8.2"
jack = "0.6.2"
lazy_static = "1.4.0"
rodio = "0.10.0"
sample = "0.10.0"
